@@ -1,3 +1,14 @@
+2010-12-08  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Build fix. Take webView{Enter,Exit}Fullscreen back out of the
+        WebKit namespace, and remove a function signature that got in by
+        mistake because of a bad merge.
+
+        * webkit/webkitprivate.h:
+        * webkit/webkitwebview.cpp:
+        (WebKit::core):
+        (WebKit::kit):
+
 2010-12-08  Brian Weinstein  <bweinstein@apple.com>
 
         Reviewed by John Sullivan.
